Adds compiler option to allow access to internal java class JavacProcessingEnvironment